fix ui and scrollbars

--- a/src/containers/MainPage/Sidebar/style.module.css
+++ b/src/containers/MainPage/Sidebar/style.module.css
@@ -75,7 +75,7 @@
 }
 
 .statuses{
-    flex: 0 1 auto;
+    flex: 1 1 auto;
     max-height: 188px;
 }
 
