--- a/src/containers/MainPage/style.module.css
+++ b/src/containers/MainPage/style.module.css
@@ -71,16 +71,11 @@
     margin-bottom: 16px;
 }
 .gpt_buttons{
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    gap: 20px;
-
-    box-sizing: border-box;
-    overflow-x: auto;
+    height: 100%;
+    /*overflow-x: auto;*/
     /*scrollbar-width: thin;*/
-    scrollbar-width: none;
-    scroll-behavior: smooth;
+    /*scrollbar-width: none;*/
+    /*scroll-behavior: smooth;*/
 }
 
 .gpt_button{
@@ -112,6 +107,18 @@
 .gpt_button.active{
     background: linear-gradient(75deg, #A18CD1 9.18%, #FBC2EB 90.82%);
     background-clip: padding-box;
+}
+
+.btn_content{
+    width: 100%;
+    height: 100%;
+
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    gap: 20px;
+
+    box-sizing: border-box;
 }
 
 .gpt_text{
@@ -180,11 +187,17 @@
     width: 100%;
 }
 
+.gpt_buttons div div {
+    scroll-behavior: smooth;
+    scrollbar-width: none;
+}
+
 .arrows:hover{
     /*background: none;*/
 }
 
 .arrow{
+    z-index: 9999;
     position: absolute;
     display: none;
     height: 100%;
